# is-task-1

./: .gitignore  Pandas&DimensionalityReduction.ipynb  hw.py  plot_histogram.py  pyproject.toml  solve_task1.py  solve_task10.py  solve_task11.py  solve_task12.py  solve_task2.py  solve_task3.py  solve_task4.py  solve_task5.py  solve_task6.py  solve_task7.py  solve_task8.py  solve_task9.py  task1.ipynb  task2.ipynb
