[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["Artem Belov <inctnce@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
forex-python = "^1.6"
ipykernel = "^6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
